--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@ node_modules/
 
 # Template for setup env
 !.env.example
+
+# TypeScript build output
+dist/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE files
+.vscode/
+.idea/
+
+# Temporary files
+*.tmp
+*.temp
